Support for minimal title

--- a/src/options.html
+++ b/src/options.html
@@ -127,6 +127,11 @@
 							<label class="cb-enable">{on}</label>
 							<label for="minimalInterface" class="description">{minimalInterface}</label>
 						</p>
+						<p class="field switch" id="minimalTitle">
+							<label class="cb-disable selected">{off}</label>
+							<label class="cb-enable">{on}</label>
+							<label for="minimalTitle" class="description">{minimalTitle}</label>
+						</p>
 						<p class="field switch" id="useDifferentTheme" data-dependents="#themeColor">
 							<label class="cb-disable selected">{off}</label>
 							<label class="cb-enable">{on}</label>
